--- a/css/icon/flaticon-icon.css
+++ b/css/icon/flaticon-icon.css
@@ -104,7 +104,7 @@
 .flaticon-database-1:before { content: "\f14a"; }
 .flaticon-database-2:before { content: "\f14b"; }
 .flaticon-database-3:before { content: "\f14c"; }
-.flaticon-diamond:before { content: "\f14d"; }
+.flaticon-diamond-1:before { content: "\f14d"; }
 .flaticon-diploma:before { content: "\f14e"; }
 .flaticon-dislike:before { content: "\f14f"; }
 .flaticon-dislike-1:before { content: "\f150"; }
@@ -113,7 +113,7 @@
 .flaticon-division:before { content: "\f153"; }
 .flaticon-document:before { content: "\f154"; }
 .flaticon-download:before { content: "\f155"; }
-.flaticon-edit:before { content: "\f156"; }
+.flaticon-pen-edit:before { content: "\f156"; }
 .flaticon-edit-1:before { content: "\f157"; }
 .flaticon-eject:before { content: "\f158"; }
 .flaticon-eject-1:before { content: "\f159"; }
