--- a/sass/_all.scss
+++ b/sass/_all.scss
@@ -1,18 +1,41 @@
-body, ul, li, menu{
+body, ul, li, menu, input, button, h1, h2, h3, h4, h5, h6, p{
 	padding: 0;
 	margin: 0;
 }
-
+p{
+	font-size: $f4;
+}
+h2{
+	font-size: $f6;
+	text-transform: uppercase;
+	font-weight: 600;
+}
+input{
+	font-size: $f4;
+	font-weight: 500;
+	padding: 7px 5px;
+	outline: none;
+}
+//.row{
+//	display: flex;
+//	justify-content: center;
+//	width: 1260px;
+//}
 .container{
-	padding: 0 40px;
+	margin: 0 40px;
 }
 
 a {
 	font-size: $f-a;
+	display: inline-block;
+	width: 100%;
 	text-decoration: none;
 	color: black;
 }
 nav{
+		li:hover a{
+			color: $grey-4;
+		}
 	.container{
 		display: flex;
 		justify-content: space-between;
@@ -21,6 +44,9 @@ nav{
 	}
 	menu, ul{
 		display: inline-block;
+		a{
+			transition: all 1s;
+		}
 		&.sign-in li{
 			&:first-child{
 				border-right: 1px solid black;
@@ -34,18 +60,32 @@ nav{
 			display: flex;
 			align-items: center;
 			menu{
-				margin-top: 70px;
 				width: 256px;
 				position: absolute;
+				top: 60px;
 				right: 0;
 				z-index: 99;
 				border: 1px solid $grey-2;
+				border-right: 0;
+				background: white;
 				border-bottom-left-radius: 5px;
 				font-size: 12px;
+				cursor: pointer;
 				li{
 					text-transform: none;
 					font-weight: normal;
 					float: none;
+					padding: 3px 8px;
+					transition: all .2s;
+					&:hover{
+						background: $grey;
+					}
+					&:hover.ping a{
+						color: $ping-3;
+					}
+					&.ping a{
+						color: $ping;
+					}
 				}
 			}
 			li{
@@ -81,6 +121,9 @@ nav{
 	}
 	i{
 		font-size: 24px;
+		display:inline-block;
+		vertical-align: middle;
+		margin-right: 10px;
 	}
 }
 
@@ -114,4 +157,40 @@ button{
 		}
 	}
 }
-
+.col-head{
+	display: flex;
+}
+.col-header{
+	width: 50%;
+	color: white;
+	float:left;
+	h2{
+		padding-top: 60px;
+		padding-bottom: 20px;
+	}
+	p{
+		padding-top: 28px;
+		padding-bottom: 20px;
+	}
+	input, & button{
+		margin: 20px 10px 2px 20px;
+	}
+}
+.lovers{
+	background: linear-gradient(90deg, rgba(0, 0, 0, 0.43) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(0deg, rgba(0, 0, 0, 0.11), rgba(0, 0, 0, 0.11)), url(../img/para.jpg), linear-gradient(180deg, #F0809B 0%, #6D001A 100%) no-repeat center;
+	background-size: cover;
+	width: 100%;
+	height: 100%;
+	&:first-child input, &:first-child button {
+		margin-left: 0;
+	}
+}
+.invitation{
+	background: linear-gradient(90deg, rgba(0, 0, 0, 0.43) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(0deg, rgba(0, 0, 0, 0.11), rgba(0, 0, 0, 0.11)), url(../img/photo.jpg), #D75675;
+	background-size: cover;
+	width: 100%;
+	height: 100%;
+	&:first-child button{
+		margin-left: 0;
+	}
+}
