--- a/css/style.css
+++ b/css/style.css
@@ -47,10 +47,8 @@ button.green:hover { background: linear-gradient(90deg, #219653 0%, #27AE60 100%
 .col-header { width: 50%; color: white; float: left; }
 .col-header h2 { padding-top: 60px; padding-bottom: 20px; }
 .col-header p { padding-top: 28px; padding-bottom: 20px; }
-.col-header input, .col-header button { margin: 20px 10px 2px 20px; }
+.col-header input, .col-header button { margin: 20px 10px 0 0; }
 
 .lovers { background: linear-gradient(90deg, rgba(0, 0, 0, 0.43) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(0deg, rgba(0, 0, 0, 0.11), rgba(0, 0, 0, 0.11)), url(../img/para.jpg), linear-gradient(180deg, #F0809B 0%, #6D001A 100%) no-repeat center; background-size: cover; width: 100%; height: 100%; }
-.lovers:first-child input, .lovers:first-child button { margin-left: 0; }
 
 .invitation { background: linear-gradient(90deg, rgba(0, 0, 0, 0.43) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(0deg, rgba(0, 0, 0, 0.11), rgba(0, 0, 0, 0.11)), url(../img/photo.jpg), #D75675; background-size: cover; width: 100%; height: 100%; }
-.invitation:first-child button { margin-left: 0; }
