--- a/sass/_all.scss
+++ b/sass/_all.scss
@@ -173,7 +173,7 @@ button{
 		padding-bottom: 20px;
 	}
 	input, & button{
-		margin: 20px 10px 2px 20px;
+		margin: 20px 10px 0 0;
 	}
 }
 .lovers{
@@ -181,16 +181,10 @@ button{
 	background-size: cover;
 	width: 100%;
 	height: 100%;
-	&:first-child input, &:first-child button {
-		margin-left: 0;
-	}
 }
 .invitation{
 	background: linear-gradient(90deg, rgba(0, 0, 0, 0.43) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(0deg, rgba(0, 0, 0, 0.11), rgba(0, 0, 0, 0.11)), url(../img/photo.jpg), #D75675;
 	background-size: cover;
 	width: 100%;
 	height: 100%;
-	&:first-child button{
-		margin-left: 0;
-	}
 }
