--- a/sass/_all.scss
+++ b/sass/_all.scss
@@ -2,14 +2,7 @@ body, ul, li, menu, input, button, h1, h2, h3, h4, h5, h6, p{
 	padding: 0;
 	margin: 0;
 }
-p{
-	font-size: $f4;
-}
-h2{
-	font-size: $f6;
-	text-transform: uppercase;
-	font-weight: 600;
-}
+
 input{
 	font-size: $f4;
 	font-weight: 500;
@@ -22,7 +15,7 @@ input{
 //	width: 1260px;
 //}
 .container{
-	margin: 0 40px;
+	padding: 0 40px;
 }
 
 a {
@@ -187,4 +180,38 @@ button{
 	background-size: cover;
 	width: 100%;
 	height: 100%;
+}
+.slider{
+	padding: 35px 0 70px;
+	background: linear-gradient(0deg, rgba(255, 255, 255, 0.97), rgba(255, 255, 255, 0.97)), url(../img/002.jpg) no-repeat center;
+	background-size: cover;
+}
+.slider-run{
+	margin-top: 35px;
+	.user{
+		.images{
+			height: 244px;
+			width: 173px;
+			overflow: hidden;
+			border-radius: 10px;
+			text-align: right;
+			img{
+				height: 100%;
+				width: auto;
+				position: relative;
+				left: -20%;
+			}
+		}
+		.username{
+			position: absolute;
+			bottom: 0;
+			width: 163px;
+			background: rgba(255, 255, 255, 0.8);
+			border-radius: 0 0 10px 10px;
+			padding: 5px;
+			h5{
+				line-height: .8;
+			}
+		}
+	}
 }
