--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,16 @@ p { font-size: 14px; }
 
 h2 { font-size: 24px; text-transform: uppercase; font-weight: 600; }
 
-h5 { font-size: 14px; text-transform: capitalize; font-weight: 500; }
+h5 { font-size: 13px; text-transform: capitalize; font-weight: 500; margin-bottom: -3px !important; }
+
+small { font-size: 11px; }
 
 body, ul, li, menu, input, button, h1, h2, h3, h4, h5, h6, p { padding: 0; margin: 0; }
 
 input { font-size: 14px; font-weight: 500; padding: 7px 5px; outline: none; }
+
+.images { overflow: hidden; }
+.images img { width: auto; height: 100%; }
 
 .container { padding: 0 40px; }
 
@@ -18,7 +23,6 @@ a { font-size: 14px; display: inline-block; width: 100%; text-decoration: none; 
 nav li:hover a { color: #4F4F4F; }
 nav .container { display: flex; justify-content: space-between; align-items: center; height: 60px; }
 nav menu, nav ul { display: inline-block; }
-nav menu a, nav ul a { transition: all 1s; }
 nav menu.sign-in li:first-child, nav ul.sign-in li:first-child { border-right: 1px solid black; padding-right: 6px; }
 nav menu.sign-in li:last-child, nav ul.sign-in li:last-child { padding-left: 6px; }
 nav menu.log-in, nav ul.log-in { display: flex; align-items: center; }
@@ -29,8 +33,8 @@ nav menu.log-in menu li:hover.ping a, nav ul.log-in menu li:hover.ping a { color
 nav menu.log-in menu li.ping a, nav ul.log-in menu li.ping a { color: #E62174; }
 nav menu.log-in li, nav ul.log-in li { padding-left: 8px; padding-right: 0; }
 nav li { font-weight: 500; text-transform: uppercase; list-style-type: none; float: left; padding: 0 13px; }
-nav li:first-child { padding: 0; }
-nav li:last-child { padding: 0; }
+nav li:first-child { padding-left: 0; }
+nav li:last-child { padding-right: 0; }
 nav .logo { display: inline-block; }
 nav .logo a { font-size: 24px; font-weight: bold; }
 nav img { height: 34px; width: 34px; border-radius: 5px; }
@@ -58,7 +62,17 @@ button.green:hover { background: linear-gradient(90deg, #219653 0%, #27AE60 100%
 .slider { padding: 35px 0 70px; background: linear-gradient(0deg, rgba(255, 255, 255, 0.97), rgba(255, 255, 255, 0.97)), url(../img/002.jpg) no-repeat center; background-size: cover; }
 
 .slider-run { margin-top: 35px; }
-.slider-run .user .images { height: 244px; width: 173px; overflow: hidden; border-radius: 10px; text-align: right; }
-.slider-run .user .images img { height: 100%; width: auto; position: relative; left: -20%; }
+.slider-run .user .images { height: 244px; width: 173px; border-radius: 10px; text-align: right; }
+.slider-run .user .images img { position: relative; left: -20%; }
 .slider-run .user .username { position: absolute; bottom: 0; width: 163px; background: rgba(255, 255, 255, 0.8); border-radius: 0 0 10px 10px; padding: 5px; }
 .slider-run .user .username h5 { line-height: .8; }
+
+.top-work .container { display: flex; justify-content: space-around; }
+.top-work .container .work { padding: 35px 0 35px 0; margin: 3px; }
+.top-work .container .work iframe { min-width: 45vw; height: 100%; }
+.top-work .container .work .images { margin-top: 15px; height: 25vw; max-width: 45vw; }
+.top-work .container .work .footer-work { padding-top: 6px; width: 100%; }
+.top-work .container .work .footer-work a { width: 30%; }
+.top-work .container .work .footer-work a .images { margin-top: 0; margin-right: 6px; height: 28px; width: 28px; float: left; border-radius: 5px; }
+
+.comment-work { color: #4F4F4F; font-size: 11px; text-align: right; display: inline; float: right; }
