--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,15 @@ button.green:hover { background: linear-gradient(90deg, #219653 0%, #27AE60 100%
 .top-work .container .work .footer-work a .images { margin-top: 0; margin-right: 6px; height: 28px; width: 28px; float: left; border-radius: 5px; }
 
 .comment-work { color: #4F4F4F; font-size: 11px; text-align: right; display: inline; float: right; }
+
+.info { padding-top: 38px; padding-bottom: 94px; }
+.info .info-head h3 { text-align: center; margin-bottom: 30px; }
+
+.triangle-bottomright { width: 0; height: 0; border-bottom: 500px solid #F9E5F2; border-left: 99vw solid transparent; }
+
+footer { background: #151515; padding-top: 23px; padding-bottom: 20px; }
+footer .footer { display: flex; justify-content: space-between; }
+footer a { color: white; }
+footer ul { float: right; }
+footer ul li { float: left; margin-left: 10px; list-style-type: none; }
+footer ul li a { font-size: 12px; }
