--- a/sass/_all.scss
+++ b/sass/_all.scss
@@ -261,3 +261,40 @@ button{
 	display: inline;
 	float: right;
 }
+.info{
+	padding-top: 38px;
+	padding-bottom: 94px;
+	.info-head h3{
+		text-align: center;
+		margin-bottom: 30px;
+	}
+}
+.triangle-bottomright {
+	width: 0;
+	height: 0;
+	border-bottom: 500px solid #F9E5F2; 
+	border-left: 99vw solid transparent;
+}
+footer{
+	background: #151515;
+	padding-top: 23px;
+	padding-bottom: 20px;
+	.footer{
+		display: flex;
+		justify-content:space-between;
+	}
+	a{
+		color: white;
+	}
+	ul{
+		float: right;
+		li{
+			float: left;
+			margin-left: 10px;
+			list-style-type: none;
+			a{
+				font-size: 12px;
+			}
+		}
+	}
+}
