--- a/sass/_all.scss
+++ b/sass/_all.scss
@@ -14,11 +14,12 @@ input{
 //	justify-content: center;
 //	width: 1260px;
 //}
-
+textarea, botton{
+	outline: none;
+}
 	.images{
 		overflow: hidden;
 		img{
-			width: auto;
 			height: 100%;
 		}
 	}
@@ -294,6 +295,147 @@ footer{
 			list-style-type: none;
 			a{
 				font-size: 12px;
+			}
+		}
+	}
+}
+
+.flaticon-like-1:before{
+	font-size: 16px;
+}
+
+	.likes:hover{
+		color: red;
+		cursor: pointer;
+	}
+.flaticon-view:before{
+	font-size: 24px;
+	position: absolute;
+	margin-top: -4px;
+}
+
+.flaticon-like-1, .flaticon-view{
+	margin-left: 3px;
+}
+
+.lightbox{
+	.overlay{
+		position:fixed;
+		background: black;
+		opacity: .4;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		z-index: 9999;
+	}
+	figure{
+		position: fixed;
+		background: white;
+		top: 10vh;
+		left: 20vw;
+		right: 20vw;
+		z-index: 99999;
+		overflow-y:auto;
+		max-height: 80vh;
+		border-radius: 0 0 5px 5px;
+		padding-bottom: 20px;
+	}
+	.images img{
+		width: 100%;
+		height: auto;
+	}
+	.container{
+		padding: 0 18px;
+	}
+}
+
+textarea{
+	width: 98%;
+	height: 65px;
+	border-radius: 5px;
+	border: 1px solid #E0E0E0;
+	resize: none;
+	background: #F2F2F2;
+//	color: #828282;
+	padding: 7px;
+}
+
+.lightbox-title{
+	display: flex;
+	justify-content: space-between;
+	margin-top: 16px;
+	.info-content{
+			margin-right: 24px;
+	}
+	.date{
+		color: #AEAEAE;
+		margin-right: 10px;
+		a{
+			display: inline;
+			color: #AEAEAE;
+			font-size: 11px;
+			text-decoration: underline;
+			&:hover{
+				text-decoration: none;
+			}
+		}
+	}
+}
+
+.lightbox-body{
+	margin-top: 25px;
+}
+.comments{
+	margin-bottom: 20px;
+	a{
+		max-width: 60%;
+	}
+	ul{
+		margin-top: 20px;
+	}
+	li{
+		list-style-type: none;
+		li{
+			padding-left: 20px;
+			margin-left: 10px;
+			border-left: 1px solid #E0E0E0;
+		}
+		.user{
+			display: flex;
+			align-content: space-between;
+			.images{
+				width: 34px;
+				height: 34px;
+				border-radius: 5px;
+			}
+			.user-name{
+				margin-left: 5px;
+			}
+			h4{
+				margin-bottom: -4px;
+			}
+			.date{
+				color: #AEAEAE;
+				margin-top: 8px;
+				margin-left: 5px;
+			}
+		}
+		.comment{
+			display: flex;
+			justify-content: space-between;
+			padding-top: 5px;
+			padding-bottom: 10px;
+			border-bottom: 1px solid #E0E0E0;
+			.info-content{
+				small{
+					color: #AEAEAE;
+					text-decoration: underline;
+					cursor: pointer;
+					&:hover{
+						text-decoration: none;
+					}
+				}
 			}
 		}
 	}
