--- a/sass/_all.scss
+++ b/sass/_all.scss
@@ -14,6 +14,11 @@ input{
 //	justify-content: center;
 //	width: 1260px;
 //}
+
+.slick-initialized .slick-slide{
+	outline: none;
+}
+
 textarea, botton{
 	outline: none;
 }
@@ -59,6 +64,13 @@ nav{
 		&.log-in{
 			display: flex;
 			align-items: center;
+			.overlay{
+				position: fixed;
+				top: 0;
+				left: 0;
+				right: 0;
+				bottom: 0;
+			}
 			menu{
 				width: 256px;
 				position: absolute;
@@ -235,6 +247,7 @@ button{
 				margin-top: 15px;
 				height: 25vw;
 				max-width: 45vw;
+				cursor: pointer;
 			}
 			.footer-work{
 				padding-top: 6px;
@@ -319,6 +332,7 @@ footer{
 }
 
 .lightbox{
+	transition: all 1s;
 	.overlay{
 		position:fixed;
 		background: black;
@@ -328,6 +342,11 @@ footer{
 		left: 0;
 		right: 0;
 		z-index: 9999;
+		cursor: pointer;
+	}
+	iframe{
+		width: 100%;
+		height: 30vw;
 	}
 	figure{
 		position: fixed;
@@ -365,8 +384,13 @@ textarea{
 	display: flex;
 	justify-content: space-between;
 	margin-top: 16px;
+	.name{
+		flex: 1;
+	}
 	.info-content{
 			margin-right: 24px;
+		flex: 2;
+		text-align: right;
 	}
 	.date{
 		color: #AEAEAE;
@@ -391,12 +415,12 @@ textarea{
 	a{
 		max-width: 60%;
 	}
-	ul{
+	li{
 		margin-top: 20px;
 	}
-	li{
+	ul{
 		list-style-type: none;
-		li{
+		ul{
 			padding-left: 20px;
 			margin-left: 10px;
 			border-left: 1px solid #E0E0E0;
