--- a/css/slick-theme.css
+++ b/css/slick-theme.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /* Slider */
-.slick-loading .slick-list { background: #fff url('../img/ajax-loader.gif') center center no-repeat; }
+.slick-loading .slick-list { background: #fff url('../img/ajax-loader.gif?1536336976') center center no-repeat; }
 
 /* Icons */
 /* Arrows */
