--- a/sass/_all.scss
+++ b/sass/_all.scss
@@ -199,6 +199,9 @@ button{
 	background-size: cover;
 	width: 100%;
 	height: 100%;
+	button{
+		margin-bottom: 35px;
+	}
 }
 .slider{
 	padding: 35px 0 70px;
