--- a/css/style.css
+++ b/css/style.css
@@ -137,14 +137,17 @@ textarea { width: 98%; height: 65px; border-radius: 5px; border: 1px solid #E0E0
 .comments ul .comment .info-content small { color: #AEAEAE; text-decoration: underline; cursor: pointer; }
 .comments ul .comment .info-content small:hover { text-decoration: none; }
 
-@media (max-width: 1600px) { .slick-next { right: 48%; }
-  .slick-prev { left: 48%; } }
 @media (max-width: 1024px) { .slick-next { right: 47%; }
   .slick-prev { left: 47%; } }
-@media (max-width: 980px) { .col-head { flex-wrap: wrap; }
-  .col-header { width: 100%; }
+@media (max-width: 980px) { .col-head, .top-work .container { flex-wrap: wrap; }
+  .col-header, .top-work .container .work, .images { width: 100%; }
+  .top-work .container .work { padding: 15px 0 15px 0; }
+  .top-work .container .work .images { height: 55vw; max-width: 100%; }
+  .top-work .container .work .footer-work a { width: 50%; }
+  .info .info-head h3 { text-align: left; }
   nav { position: fixed; background: white; left: 0; right: 0; top: 0; z-index: 9999; }
   header { margin-top: 60px; }
+  footer { margin-bottom: 50px; }
   nav menu, nav ul { display: none; }
   .mobile-menu { display: flex; align-items: center; justify-content: space-between; position: fixed; padding: 0 40px; height: 50px; background: white; left: 0; right: 0; bottom: 0; z-index: 9999; } }
 @media (min-width: 980px) { .mobile-menu { display: none; } }
