--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,12 @@ button.green:hover { background: linear-gradient(90deg, #219653 0%, #27AE60 100%
 .col-header p { padding-top: 28px; padding-bottom: 20px; }
 .col-header input, .col-header button { margin: 20px 10px 0 0; }
 
+.swiper-container { width: 600px; height: 300px; }
+
+.swiper-container { width: 100%; padding-top: 50px; padding-bottom: 50px; }
+
+.swiper-slide { background-position: center; background-size: cover; height: 244px !important; width: 173px !important; }
+
 .lovers { background: linear-gradient(90deg, rgba(0, 0, 0, 0.43) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(0deg, rgba(0, 0, 0, 0.11), rgba(0, 0, 0, 0.11)), url(../img/para.jpg), linear-gradient(180deg, #F0809B 0%, #6D001A 100%) no-repeat center; background-size: cover; width: 100%; height: 100%; }
 
 .invitation { background: linear-gradient(90deg, rgba(0, 0, 0, 0.43) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(0deg, rgba(0, 0, 0, 0.11), rgba(0, 0, 0, 0.11)), url(../img/photo.jpg), #D75675; background-size: cover; width: 100%; height: 100%; }
